Branch to look at issues in compiling the LundGenerator package in FastJet. Added appropriate calls to Makefile and a simple Lund example to analyzeSimuJetSubstructure.cxx to make sure things run.

--- a/analysis/Makefile
+++ b/analysis/Makefile
@@ -15,6 +15,7 @@ LDFLAGS     += `root-config --libs`
 LDFLAGS     += `fastjet-config --libs --plugins`
 #LDFLAGS     += -L$(PYTHIA8)/lib -lpythia8
 LDFLAGS     += -lRecursiveTools
+LDFLAGS	    += -lLundPlane
 
 IDIR = ../
 DEPS = treeUtilities.h
